Correct linter errors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <label id="email-label">Enter your email:</label>
             <input placeholder="email" id="email" type="email" required>
             <label id="number-label">Enter your age:</label>
-            <input placeholder="age" type="number" name="" id="number" min="18" max="100" required >
+            <input placeholder="age" type="number" name="test" id="number" min="18" max="100" required >
             <label id="timezone-label">Select your time zone:</label>
             <select name="test" id="dropdown">
                <option value="one">European Time Zone (UTC+1)</option>
@@ -30,9 +30,9 @@
             <input type="checkbox" value="2">
             <label id="suggestion-zone">Leave a suggestion for us:</label>
             <textarea></textarea>
-            <button id="submit">Submit</button>
+            <button id="submit" type="button">Submit</button>
         </form>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
-</html
+</html>
